--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-firebase": "^5.6.0"
+
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
