--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.63.3",
-    "react-native-firebase": "^5.6.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
     "base-64": "^0.1.0",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-web": "~0.11.7"
-
-
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
