--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -192,7 +192,7 @@ implementation "com.google.android.gms:play-services-base:17.1.0"
     implementation "com.google.firebase:firebase-messaging:20.0.0"
 implementation 'com.google.firebase:firebase-firestore:21.5.0'     
 implementation 'com.google.firebase:firebase-auth:19.3.2'
-
+implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
