--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "base-64": "^0.1.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-customized-image-picker": "^1.1.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.6.0",
